--- a/package.json
+++ b/package.json
@@ -8,13 +8,14 @@
     "husky": "^3.0.4",
     "lint-staged": "^9.2.5",
     "material-ui": "^0.20.2",
+    "minimist": "^1.2.5",
     "origen-react-instagram-feed": "0.0.3",
     "prettier": "^1.18.2",
     "react": "^16.9.0",
     "react-bootstrap": "^1.0.0-beta.12",
     "react-dom": "^16.9.0",
     "react-router-dom": "^5.0.0",
-    "react-scripts": "3.0.1",
+    "react-scripts": "^3.4.0",
     "react-scroll": "^1.7.14",
     "react-scrollable-anchor": "^0.6.1",
     "reactstrap": "^8.0.1"
@@ -51,5 +52,8 @@
     "hooks": {
       "pre-commit": "lint-staged"
     }
+  },
+  "engines": {
+    "node": "10.0"
   }
 }
