--- a/package.json
+++ b/package.json
@@ -3,22 +3,26 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^3.9.3",
+    "@material-ui/core": "^4.9.7",
     "bootstrap": "^4.3.1",
+    "eslint-plugin-flowtype": "^3.13.0",
+    "fibers": "^4.0.2",
     "husky": "^3.0.4",
+    "jquery": "^3.4.1",
     "lint-staged": "^9.2.5",
-    "material-ui": "^0.20.2",
     "minimist": "^1.2.5",
     "origen-react-instagram-feed": "0.0.3",
     "prettier": "^1.18.2",
-    "react": "^16.9.0",
+    "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.12",
     "react-dom": "^16.9.0",
     "react-router-dom": "^5.0.0",
     "react-scripts": "^3.4.0",
     "react-scroll": "^1.7.14",
     "react-scrollable-anchor": "^0.6.1",
-    "reactstrap": "^8.0.1"
+    "reactstrap": "^8.0.1",
+    "sass": "^1.3.0",
+    "typescript": "^3.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
